# browser-agent-detector

./: .gitignore  README.md
ai-detector/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai-detector/infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
ai-detector/models/browser/: model.txt
ai-detector/models/persona/: cluster_isolation_models.pkl  kmeans_model.pkl  model_metadata.json
ai-detector/scripts/: run_server.sh
ai-detector/share_for_codex/: lightgbm_model.txt  updated_feature_extractor.py  updated_lightgbm_loader.py
ai-detector/src/: config.py
ai-detector/src/api/: app.py  dependencies.py
ai-detector/src/api/routes/: detection.py  system.py
ai-detector/src/models/: browser_anomaly.py  cluster_detector.py  lightgbm_loader.py
ai-detector/src/schemas/: cluster.py  detection.py
ai-detector/src/services/: bot_anomaly_service.py  detection_service.py  feature_extractor.py
ai-detector/tests/: EXPLANATION.md  measure_cluster_detection_rate.py  test_cluster_api.py  test_detection_api.py
ai-detector/tests/data/: cluster_detection_anomaly.csv  cluster_detection_cases_real.csv  cluster_detection_normal.csv  test_detection.json
ai-detector/training/browser/: train_bot_anomaly.py  train_lightgbm.py
ai-detector/training/browser/data/bot/: behavioral_20251116.jsonl  behavioral_20251124.jsonl
ai-detector/training/browser/data/human/: behavioral_20251115.jsonl  behavioral_20251116.jsonl  behavioral_20251125.jsonl
ai-detector/training/browser/model/20251116_072629/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251116_084819/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251116_085021/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251116_092236/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251116_092436/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251116_093721/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251116_094400/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251124_152546/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251125_151231/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251125_152600/: training_summary.json
ai-detector/training/browser/model/20251125_152632/: lightgbm_model.txt  training_summary.json
ai-detector/training/browser/model/20251125_153159/: bot_isolation_model.joblib  training_summary.json
ai-detector/training/browser/model/20251125_155814/: bot_isolation_model.joblib  feature_report.md  training_summary.json
ai-detector/training/cluster/: create_models.py
ai-detector/training/cluster/data/: distribution.md  ecommerce_clustering_data.csv
apps/: README.md
apps/ecommerce-site/: middleware.ts  (+5 more)
docs/: API-doc.md  ai-detector-api-update-plan.md  browser-detection-data.md  browser-detection-plan.md  data-model.md  prompts.md  requirements.md  scripts.md  setup-guide.md
(+50 files in other folders)
